# max-m10s-rs

./: AGENTS.md  Cargo.toml  README.md  readme_claude.md  rust-toolchain.toml
example-sfy/: Cargo.toml  Makefile  rust-toolchain.toml
example-sfy/.cargo/: config.toml
example-sfy/src/: main.rs
src/: lib.rs
src/ubx/: mod.rs
