[package]
name = "max-m10s"
version = "0.1.0"
edition = "2021"
authors = []
description = "Embedded driver for the u-blox MAX-M10S GNSS module"
repository = "https://github.com/gauteh/max-m10s-rs"
license = "MIT"
keywords = ["gnss", "gps", "i2c", "embedded-hal-driver", "max-m10s"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "0.2"

[features]
default = []
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = "0.10"
